--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#4caf50</color>
     <color name="colorPrimaryDark">#2e7d32</color>
-    <color name="colorAccent">#00c853</color>
-    <color name="colorTitle">#ffffff</color>
+    <color name="colorAccent">#FF3D00</color>
+    <color name="colorTitle">#FFFF00</color>
 </resources>
