--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -12,12 +12,10 @@
     android:id="@+id/qa_card"
     android:background="?android:attr/selectableItemBackground">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:layout_marginLeft="5dp">
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -33,6 +31,6 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:id="@+id/timestamp_tv"
                 android:layout_weight="0"/>
-        </LinearLayout>
+        </RelativeLayout>
 
 </android.support.v7.widget.CardView>
