--- a/app/src/main/res/menu/add_question.xml
+++ b/app/src/main/res/menu/add_question.xml
@@ -4,7 +4,7 @@
 
     <item android:id="@+id/add_question"
         android:title="Add"
-        android:icon="@drawable/ic_menu_send"
+        android:icon="@drawable/ic_check_white_24dp"
         app:showAsAction="always" />
 
 </menu>
