--- a/app/src/main/res/layout/item_question.xml
+++ b/app/src/main/res/layout/item_question.xml
@@ -6,7 +6,7 @@
     card_view:cardElevation="2dp"
     card_view:cardUseCompatPadding="true"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:clickable="true"
     android:id="@+id/qa_card"
@@ -15,22 +15,22 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:padding="4dp">
 
             <TextView
+                android:id="@+id/question_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/question_tv"
-                android:layout_weight="0"
                 android:fontFamily=""/>
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/timestamp_tv"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/timestamp_tv"
-                android:layout_weight="0"/>
+                android:layout_below="@id/question_tv"/>
         </RelativeLayout>
 
 </android.support.v7.widget.CardView>
