--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -17,19 +17,22 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:id="@+id/user_iv"
-        android:src="@drawable/ic_account_circle_black_36dp" />
+        android:src="@drawable/ic_account_circle_black_36dp"
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/username_tv"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="android.studio@android.com" />
+        android:text="@string/app_name"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
