--- a/app/src/main/res/layout/activity_add_question.xml
+++ b/app/src/main/res/layout/activity_add_question.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.google.firebase.codelab.friendlychat.AddQuestionActivity">
+    tools:context="com.google.firebase.codelab.friendlychat.com.android.interview.AddQuestionActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
