--- a/app/src/main/res/layout/fragment_about_me.xml
+++ b/app/src/main/res/layout/fragment_about_me.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BaseActivity">
+    tools:context="com.android.interview.BaseActivity">
 
     <TextView
         android:layout_width="wrap_content"
