--- a/app/src/main/res/menu/activity_base_drawer.xml
+++ b/app/src/main/res/menu/activity_base_drawer.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.android.interview.BaseActivity">
+    tools:context="com.android.interview.MainActivity">
 
     <group android:checkableBehavior="single">
         <item
