--- a/app/src/main/res/layout/activity_add_question.xml
+++ b/app/src/main/res/layout/activity_add_question.xml
@@ -35,7 +35,7 @@
         android:hint="Question..." />
 
     <EditText
-        android:id="@+id/add_uri_et"
+        android:id="@+id/add_url_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Reference Link"
