--- a/app/src/main/res/layout/fragment_detail_question.xml
+++ b/app/src/main/res/layout/fragment_detail_question.xml
@@ -46,4 +46,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Created On:"/>
+
+    <TextView
+        android:id="@+id/timestamp_detail_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
