--- a/app/src/main/res/menu/activity_main_drawer_menu.xml
+++ b/app/src/main/res/menu/activity_main_drawer_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.android.interview.MainActivity">
 
@@ -29,6 +28,17 @@
                 android:id="@+id/nav_about"
                 android:icon="@drawable/ic_mood_black_24dp"
                 android:title="About Me" />
+        </menu>
+    </item>
+
+    <item
+        android:title="Admin"
+        android:id="@+id/admin_menu"
+        android:visible="false">
+        <menu>
+            <item
+                android:id="@+id/nav_review"
+                android:title="Review Questions" />
         </menu>
     </item>
 
