--- a/app/src/main/res/menu/activity_main_drawer_menu.xml
+++ b/app/src/main/res/menu/activity_main_drawer_menu.xml
@@ -38,6 +38,7 @@
         <menu>
             <item
                 android:id="@+id/nav_review"
+                android:icon="@drawable/ic_vpn_key_black_24dp"
                 android:title="Review Questions" />
         </menu>
     </item>
