--- a/app/src/main/res/menu/activity_main_options.xml
+++ b/app/src/main/res/menu/activity_main_options.xml
@@ -13,4 +13,9 @@
         android:id="@+id/sign_out_menu"
         android:title="@string/sign_out"
         app:showAsAction="never"/>
+
+    <item android:id="@+id/edit_menu"
+        android:title="Edit"
+        app:showAsAction="always"
+        android:visible="false"/>
 </menu>
