--- a/app/src/main/res/menu/edit_question.xml
+++ b/app/src/main/res/menu/edit_question.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/add_question"
+    <item android:id="@+id/enter_question"
         android:title="Add"
         android:icon="@drawable/ic_check_white_24dp"
         app:showAsAction="always" />
