--- a/app/src/main/res/layout/activity_add_question.xml
+++ b/app/src/main/res/layout/activity_add_question.xml
@@ -7,52 +7,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.android.interview.EditQuestionActivity">
+    tools:context="com.android.interview.AddQuestionActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/edit_question_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/add_question_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/question"/>
+        android:text="@string/activity_add_question_detail" />
 
     <EditText
-        android:id="@+id/edit_question_et"
+        android:id="@+id/add_question_et"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/url_reference"/>
+        android:hint="Question..." />
 
     <EditText
-        android:id="@+id/edit_url_et"
+        android:id="@+id/add_url_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Reference Link"
         android:inputType="textUri"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/answer"/>
-
     <EditText
-        android:id="@+id/edit_answer_et"
+        android:id="@+id/add_answer_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Answer..."
         android:inputType="textMultiLine" />
 
 </LinearLayout>
