added splash screen

--- a/app/src/main/res/layout/activity_add_question.xml
+++ b/app/src/main/res/layout/activity_add_question.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context="com.android.interview.AddQuestionActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -23,29 +21,40 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/activity_add_question_detail" />
-
-    <EditText
-        android:id="@+id/add_question_et"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Question..." />
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <EditText
-        android:id="@+id/add_url_et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Reference Link"
-        android:inputType="textUri"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/activity_add_question_detail" />
 
-    <EditText
-        android:id="@+id/add_answer_et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Answer..."
-        android:inputType="textMultiLine" />
+        <EditText
+            android:id="@+id/add_question_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Question..." />
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/add_url_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Reference Link"
+            android:inputType="textUri"/>
+
+        <EditText
+            android:id="@+id/add_answer_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Answer..."
+            android:inputType="textMultiLine" />
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
